Quick fix for main-bg not showing at 100%, btns and inputs

--- a/css/generalStyle.css
+++ b/css/generalStyle.css
@@ -49,7 +49,7 @@ li{
     margin: 0 auto;
 }
 .main-bg{
-    height: 100%;
+    min-height: 100%;
     padding-bottom: 1em;
 
 }
@@ -84,8 +84,8 @@ li{
     border: none;
     border-radius: 14px;
 
-    align-self: center;
-    padding: 1em 3em;
+    
+    padding: 1em 2em;
 }
 .miles-btn{
     align-self: center;
