--- a/css/mainApp/miles.css
+++ b/css/mainApp/miles.css
@@ -12,7 +12,8 @@
 .calc-item{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: center;
+    
     margin: 1em 0;
 }
 .calc-item > h2{
